--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -54,7 +54,7 @@ figure \ref{fig:incorrect}.
 
 \subsection{Differing setups}
 Further runs were made with different setups, changing different parameters but
-keeping the method described. The parameters and results from the validation
+keeping the described method. The parameters and results from the validation
 and testing are shown in \ref{fig:runs}.
 
 \begin{table}[h]
