--- a/doc/pres.tex
+++ b/doc/pres.tex
@@ -7,7 +7,7 @@
 \usepackage{subcaption}
 \usepackage{color}
 \usepackage{tikz}
-\usepackage[top=8mm, bottom=0mm, left=7mm, right=7mm]{geometry}
+\usepackage[top=8mm, bottom=0mm, left=4mm, right=4mm]{geometry}
 \usetikzlibrary{matrix}
 
 \pagestyle{empty}
@@ -39,48 +39,29 @@
     \end{center}
 \end{titlepage}
 
-\begin{slide}{Overview}
-    \begin{itemize}
-        \item Preproccessing
-        \item Neural network (multilayer perceptron)
-        \item Evaluation
-    \end{itemize}
-\end{slide}
-
-\begin{slide}{Preprocessing}
-    \vspace*{1cm}
-    \begin{figure}[h]
-        \centering
-        \begin{subfigure}[c]{0.3\textwidth}
-            \resizebox{\textwidth}{!}{\input{build/fig/preprocess_0.tex}}
-            \caption{raw}
-        \end{subfigure}%
-        {\large $\rightarrow$}
-        \begin{subfigure}[c]{0.3\textwidth}
-            \resizebox{\textwidth}{!}{\input{build/fig/preprocess_1.tex}}
-            \caption{projected}
-        \end{subfigure}%
-        {\large $\rightarrow$}
-        \begin{subfigure}[c]{0.3\textwidth}
-            \resizebox{\textwidth}{!}{\input{build/fig/preprocess_2.tex}}
-            \caption{scaled and translated}
-        \end{subfigure}
-    \end{figure}
-\end{slide}
+%\begin{slide}{Overview}
+%    \begin{itemize}
+%        \item Preproccessing
+%        \item Neural network (multilayer perceptron)
+%        \item Evaluation
+%    \end{itemize}
+%\end{slide}
 
 \begin{slide}{Preprocessing}
     \vspace{1cm}
     \begin{figure}[h]
         \centering
-        \begin{subfigure}[c]{0.3\textwidth}
-            \centering
-            \vspace*{-3.5mm}
-            \resizebox{\textwidth}{!}{\input{build/fig/rasterize_0.tex}}
-            \vspace*{-9mm}
-            \caption{scaled}
+        \begin{subfigure}[t]{0.20\textwidth}
+            \resizebox{\textwidth}{!}{\input{build/fig/preprocess_0.tex}}
+            \caption{raw}
         \end{subfigure}%
-        {\large $\rightarrow$}
-        \begin{subfigure}[c]{0.3\textwidth}
+        {$\rightarrow$}
+        \begin{subfigure}[t]{0.2\textwidth}
+            \resizebox{\textwidth}{!}{\input{build/fig/preprocess_2.tex}}
+            \caption{scaled and translated}
+        \end{subfigure}
+        {$\rightarrow$}
+        \begin{subfigure}[t]{0.20\textwidth}
             \hspace*{4mm}
             \resizebox{0.92\textwidth}{!}{%
                 \includegraphics{build/fig/rasterize_1.png}
@@ -88,8 +69,8 @@
             \vfill
             \caption{rasterized}
         \end{subfigure}%
-        {\large $\rightarrow$}
-        \begin{subfigure}[c]{0.3\textwidth}
+        {$\rightarrow$}
+        \begin{subfigure}[t]{0.20\textwidth}
             \centering
             \hspace*{1mm}
             \resizebox{0.92\textwidth}{!}{%
@@ -102,16 +83,17 @@
 \end{slide}
 
 \begin{slide}{Neural network}
-    \begin{minipage}{0.3\textwidth}
+    \begin{minipage}{0.35\textwidth}
         \begin{itemize}
-            \item 400 pixel intensities + bias as input neurons
+            \item Multilayer perceptron with single hidden layer.
+            \item 400 pixel intensities + bias as input neurons.
             \item 1000 iterations of feedforward and backpropagation on 700
-                training samples
+                training samples.
             \item Multiple networks with different number of hidden neurons.
             \item Each classifier compared using a validation set (N=100).
         \end{itemize}
     \end{minipage}
-    \begin{minipage}{0.7\textwidth}
+    \begin{minipage}{0.65\textwidth}
         \vspace*{-5mm}
         \centering
         \resizebox*{\textwidth}{!}{\input{doc/fig/mlp.tex}}
