--- a/doc/fig/mlp.tex
+++ b/doc/fig/mlp.tex
@@ -25,8 +25,8 @@
     };
 
     % Neurons
-    \foreach \ai in {2,4}
-        \node at (mat-\ai-1) {$x_{1}$};
+    \foreach \ai [count=\mi] in {2,4}
+        \node at (mat-\ai-1) {$x_{\mi}$};
     \node at (mat-6-1) {$\vdots$};
     \node at (mat-8-1) {$x_{\beta}$};
     \node at (mat-10-1) {$1$};
@@ -35,8 +35,8 @@
     \node at (mat-6-2) {\vdots};
     \node at (mat-9-2) {$y^h_H$};
 
-    \foreach \ai in {2,4,...,6}
-        \node at (mat-\ai-3) {$y^o_1$};
+    \foreach \ai [count=\mi] in {2,4,...,6}
+        \node at (mat-\ai-3) {$y^o_\mi$};
     \node at (mat-8-3) {$\vdots$};
     \node at (mat-10-3) {$y^o_D$};
 
